--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 		<p>Just down the street from the Starbucks Coffee Shop.</p>
 
 		<figure class="fw">
-			<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543249/office-1_ljffrj.jpg" alt="office" width="3500" height="2334">
+			<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543249/office-1_ljffrj.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543249/office-1_ljffrj.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543249/office-1_ljffrj.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543249/office-1_ljffrj.jpg 1200w" alt="office" width="3500" height="2334">
 			<figcaption>Join us today!</figcaption>
 		</figure>
 	</header>
@@ -128,43 +128,43 @@
 
 		<div class="figure-grp">
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543234/office-2_wiippt.jpg" alt="office" width="3500" height="2334">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543234/office-2_wiippt.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543234/office-2_wiippt.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543234/office-2_wiippt.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543234/office-2_wiippt.jpg 1200w" alt="office" width="3500" height="2334">
 			</figure>
 
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543219/office-3_r0pbzd.jpg" alt="office" width="3500" height="2333">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543219/office-3_r0pbzd.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543219/office-3_r0pbzd.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543219/office-3_r0pbzd.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543219/office-3_r0pbzd.jpg 1200w" alt="office" width="3500" height="2333">
 			</figure>			
 		</div> <!-- end figure-grp -->
 
 		<div class="figure-grp">
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543299/office-8_k5nscl.jpg" alt="office" width="3500" height="2333">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543299/office-8_k5nscl.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543299/office-8_k5nscl.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543299/office-8_k5nscl.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543299/office-8_k5nscl.jpg 1200w" alt="office" width="3500" height="2333">
 			</figure>
 
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543303/office-9_d33cff.jpg" alt="office" width="3500" height="2333">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543303/office-9_d33cff.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543303/office-9_d33cff.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543303/office-9_d33cff.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543303/office-9_d33cff.jpg 1200w" alt="office" width="3500" height="2333">
 			</figure>			
 		</div> <!-- end figure-grp -->
 
 		<div class="figure-grp">
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543249/office-1_ljffrj.jpg" alt="office" width="3500" height="2334">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543249/office-1_ljffrj.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543249/office-1_ljffrj.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543249/office-1_ljffrj.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543249/office-1_ljffrj.jpg 1200w" alt="office" width="3500" height="2334">
 			</figure>
 
 			<figure class="half">
-				<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543234/office-2_wiippt.jpg" alt="office" width="3500" height="2334">
+				<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543234/office-2_wiippt.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543234/office-2_wiippt.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543234/office-2_wiippt.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543234/office-2_wiippt.jpg 1200w" alt="office" width="3500" height="2334">
 			</figure>			
 		</div> <!-- end figure-grp -->
 
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, quisquam voluptatum in ipsa provident blanditiis nesciunt facere. Ea, officiis provident placeat fugit cupiditate minima enim veniam libero hic tempore deserunt iusto qui harum vero consectetur suscipit, architecto cum voluptate assumenda. Eveniet facere officiis ullam, est quasi debitis voluptates corporis culpa!</p>
 
 		<figure>
-			<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543304/office-4_ulzijm.jpg" alt="office" width="3500" height="2333">
+			<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543304/office-4_ulzijm.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543304/office-4_ulzijm.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543304/office-4_ulzijm.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543304/office-4_ulzijm.jpg 1200w" alt="office" width="3500" height="2333">
 			<figcaption>Post-its</figcaption>
 		</figure>
 
 		<figure class="fw">
-			<img src="https://res.cloudinary.com/dvoigkose/image/upload/q_auto,w_300/v1729543288/office-5_gtnoem.jpg" alt="office" width="3500" height="2333">
+			<img src="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543288/office-5_gtnoem.jpg" srcset="https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_300/v1729543288/office-5_gtnoem.jpg 300w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_600/v1729543288/office-5_gtnoem.jpg 600w, https://res.cloudinary.com/dvoigkose/image/upload/f_auto,q_auto,w_1200/v1729543288/office-5_gtnoem.jpg 1200w, " alt="office" width="3500" height="2333">
 			<figcaption>Laptop on table</figcaption>
 		</figure>		
 	</main>
