--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 				margin-top: 1.5em;
 				font-style: italic;
 				font-weight: 300;
-				color: #CC9B70;
+				color: #191970;
 				text-align: left;
+				margin-left: 0.5em;
 			}
 
 				figcaption::before {
@@ -61,12 +62,17 @@
 				}
 
 		figure.half {
-			width: 50%;
-			float: left;
+			width: 100%;
+		}
+
+		.figure-grp{
+			display: grid;
+			grid-template-columns: 1fr 1fr;
+			gap: 0.35em;
 		}
 
 		.figure-grp + .figure-grp figure {
-			margin-top: -3em;
+			margin-top: -2.75em;
 		}
 
 		blockquote {
@@ -89,9 +95,11 @@
 
 		p {
 			color: #444;
-			max-width: 45em;
+			max-width: 65ch;
 			margin-left: auto;
 			margin-right: auto;
+			padding-left: 3em;
+			padding-right: 3em;
 		}
 
 		img {
